2005-12-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/help2man-vars.make (OUT_DIST_FILES): only do
	something if DOCUMENTATION is no.

2005-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.7.24

	* lily/script-column-engraver.cc (stop_translation_timestep):
	delay adding to script-column.

	* lily/tuplet-bracket.cc (print): suicide if no control-points. 

	* python/convertrules.py (conv): rule for number-visibility

	* lily/slur-configuration.cc (score_extra_encompass): different
	distance measure for avoid and inside avoidance.
	(score_extra_encompass): use 1/(distance+eps) as penalty.

	* lily/slur-scoring.cc (generate_avoid_offsets): use 'inside
	encompass objects for generating slur curves.

	* lily/slur.cc: use details iso. slur-details property.

	* input/regression/slur-tuplet.ly: new file.

	* lily/slur-engraver.cc (acknowledge_tuplet_number): new function.  

	* flower/include/offset.hh (class Offset): new operator /=

	* lily/tuplet-number.cc (print): new file, new interface.

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove number-visibility property.

	* lily/tuplet-bracket.cc (calc_control_points): new function
	(calc_connect_to_neighbors): new function.
	(print): remove text handling for tuplet numberdef.

	* lily/tuplet-engraver.cc (struct Tuplet_description): create
	TupletNumbers too. 

	* lily/lily-guile.cc (robust_scm2booldrul): new function

	* scm/define-grobs.scm (all-grob-descriptions): new grob TupletNumber

	* lily/tuplet-bracket.cc (calc_position_and_height): use
	staff-padding to control whether tuplet brackets are over staves.

	* lily/grob.cc (suicide): clear dim_caches_.

	* lily/dimension-cache.cc (clear): new function.

	* lily/grob.cc (extent): swap order of min-extent and extent
	calculations. This fixes hara kiri staves. 

2005-12-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc: Nitpick: relocation is not based on path, but on
	directory (location).
